# mmlearn

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  api.html  contributing.html  genindex.html  getting_started.html  index.html  installation.html  mkdocs.yml  objects.inv  page.html  py-modindex.html  pyproject.toml  script.sh  search.html  searchindex.js  user_guide.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code_checks.yml  docs.yml  docs_build.yml  docs_deploy.yml  integration_tests.yml  publish.yml
_modules/: index.html
_modules/mmlearn/: conf.html  hf_utils.html
_modules/mmlearn/cli/: run.html
_modules/mmlearn/datasets/: chexpert.html  imagenet.html  librispeech.html  llvip.html  nihcxr.html  nyuv2.html  sunrgbd.html
_modules/mmlearn/modules/: ema.html
_modules/mmlearn/tasks/: base.html  contrastive_pretraining.html  hooks.html  ijepa.html  zero_shot_classification.html  zero_shot_retrieval.html
_sources/reference/api/: mmlearn.cli.rst.txt  mmlearn.cli.run.rst.txt  mmlearn.conf.DataLoaderConf.rst.txt  mmlearn.conf.DatasetConf.rst.txt  mmlearn.conf.JobType.rst.txt  mmlearn.conf.MMLearnConf.rst.txt  mmlearn.conf.rst.txt  mmlearn.constants.rst.txt  mmlearn.datasets.chexpert.CheXpert.rst.txt  mmlearn.datasets.chexpert.rst.txt  mmlearn.datasets.core.combined_dataset.CombinedDataset.rst.txt  mmlearn.datasets.core.combined_dataset.rst.txt  mmlearn.datasets.core.data_collator.DefaultDataCollator.rst.txt  mmlearn.datasets.core.data_collator.rst.txt  mmlearn.datasets.core.example.Example.rst.txt  mmlearn.datasets.core.example.rst.txt  mmlearn.datasets.core.modalities.Modality.rst.txt  mmlearn.datasets.core.modalities.ModalityRegistry.rst.txt  mmlearn.datasets.core.modalities.rst.txt  mmlearn.datasets.core.rst.txt  mmlearn.datasets.core.samplers.CombinedDatasetRatioSampler.rst.txt  mmlearn.datasets.core.samplers.DistributedEvalSampler.rst.txt  mmlearn.datasets.core.samplers.rst.txt  mmlearn.datasets.imagenet.ImageNet.rst.txt  mmlearn.datasets.imagenet.rst.txt  mmlearn.datasets.librispeech.LibriSpeech.rst.txt  mmlearn.datasets.librispeech.rst.txt  mmlearn.datasets.llvip.LLVIPDataset.rst.txt  mmlearn.datasets.llvip.rst.txt  mmlearn.datasets.nihcxr.NIHCXR.rst.txt  mmlearn.datasets.nihcxr.rst.txt  mmlearn.datasets.nyuv2.NYUv2Dataset.rst.txt  mmlearn.datasets.nyuv2.rst.txt  mmlearn.datasets.processors.masking.BlockwiseImagePatchMaskGenerator.rst.txt  mmlearn.datasets.processors.masking.IJEPAMaskGenerator.rst.txt  mmlearn.datasets.processors.masking.RandomMaskGenerator.rst.txt  mmlearn.datasets.processors.masking.rst.txt  mmlearn.datasets.processors.rst.txt  mmlearn.datasets.processors.tokenizers.HFTokenizer.rst.txt  mmlearn.datasets.processors.tokenizers.Img2Seq.rst.txt  (+70 more)
_static/: documentation_options.js
configs/experiment/: med_contrastive_pretraining.yaml
contributing/: index.html
docs/: api.md  contributing.md  index.md  installation.md  user_guide.md
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst  user_guide.rst
docs/source/_templates/: base.html  custom-class-template.rst  custom-module-template.rst
installation/: index.html
mmlearn/: __init__.py  constants.py  globals.py  hf_utils.py
mmlearn/cli/: __init__.py  _instantiators.py  run.py
mmlearn/conf/: __init__.py
mmlearn/datasets/: __init__.py  chexpert.py  ego4d.py  imagenet.py  librispeech.py  llvip.py  medvqa.py  mimiciv_cxr.py  nihcxr.py  nyuv2.py  pmcoa.py  quilt.py  roco.py  sunrgbd.py
mmlearn/datasets/core/: __init__.py  combined_dataset.py  data_collator.py  dataset_info.py  example.py  modalities.py  samplers.py
mmlearn/modules/: __init__.py  ema.py
mmlearn/tasks/: __init__.py  base.py  classification.py  contrastive_pretraining.py  data2vec.py  hooks.py  ijepa.py  ijepa_pretraining.py  linear_evaluation.py  linear_probing.py  linear_probing_classification.py  zero_shot_classification.py  zero_shot_mock.py  zero_shot_retrieval.py
mmlearn_negin/: pyvenv.cfg
projects/bioscan_clip/: README.md  dataset.py  dna_tokenizer.py  encoders.py  eval_task.py  requirements.txt
projects/med_benchmarking/: README.md  requirements.txt
reference/api/: mmlearn.cli.html  mmlearn.cli.run.html  mmlearn.conf.DataLoaderConf.html  mmlearn.conf.DatasetConf.html  mmlearn.conf.JobType.html  mmlearn.conf.MMLearnConf.html  mmlearn.conf.html  mmlearn.constants.html  mmlearn.datasets.chexpert.CheXpert.html  mmlearn.datasets.chexpert.html  mmlearn.datasets.core.combined_dataset.CombinedDataset.html  mmlearn.datasets.core.combined_dataset.html  mmlearn.datasets.core.data_collator.DefaultDataCollator.html  mmlearn.datasets.core.data_collator.html  mmlearn.datasets.core.example.Example.html  mmlearn.datasets.core.example.html  mmlearn.datasets.core.html  mmlearn.datasets.core.modalities.Modality.html  mmlearn.datasets.core.modalities.ModalityRegistry.html  mmlearn.datasets.core.modalities.html  mmlearn.datasets.core.samplers.CombinedDatasetRatioSampler.html  mmlearn.datasets.core.samplers.DistributedEvalSampler.html  mmlearn.datasets.core.samplers.html  mmlearn.datasets.html  mmlearn.datasets.imagenet.ImageNet.html  mmlearn.datasets.imagenet.html  mmlearn.datasets.librispeech.LibriSpeech.html  mmlearn.datasets.librispeech.html  mmlearn.datasets.llvip.LLVIPDataset.html  mmlearn.datasets.llvip.html  mmlearn.datasets.nihcxr.NIHCXR.html  mmlearn.datasets.nihcxr.html  mmlearn.datasets.nyuv2.NYUv2Dataset.html  mmlearn.datasets.nyuv2.html  mmlearn.datasets.processors.html  mmlearn.datasets.processors.masking.BlockwiseImagePatchMaskGenerator.html  mmlearn.datasets.processors.masking.IJEPAMaskGenerator.html  mmlearn.datasets.processors.masking.RandomMaskGenerator.html  mmlearn.datasets.processors.masking.html  mmlearn.datasets.processors.tokenizers.HFTokenizer.html  (+70 more)
search/: search_index.json
tests/datasets/: __init__.py  test_combined_dataset.py  test_example.py  test_masking.py  test_modality.py  toy_dataset_zsc.py
tests/modules/: __init__.py  test_ema.py
user_guide/: index.html
(+83 files in other folders)
